# sprint_mid_project_team1

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  logging_config.py  main.py  pipeline.py  pyproject.toml  run_pipe.sh
.github/workflows/: lint.yaml
configs/: config.py  prompt.py
docs/: naive_data_pipeline_handoff.md
reports/: hit_scoreboard.csv  ragas_evaluation_result.csv
scripts/: check_local.py  gcp_run_advanced_preprocessing.sh  run_advanced_chunking.py  run_advanced_indexing.py  run_advanced_preprocessing.py  run_chunking.py  run_embedding_redaction.py  run_eval.py  run_indexing.py  run_metadata_enrichment.py  run_rag.py
src/: dataset.py
src/chunking/: advanced_chunking.py  enrich_metadata.py  split_text.py
src/embeddings/: build_advanced_index.py  build_embeddings.py  redact_sensitive_text.py
src/evaluation/: eval_rag.py
src/generation/: generate_answer.py
src/loader/: load_documents.py
src/preprocessing/: clean_text.py  prepare_advanced.py  table_formats.py
src/retrieval/: retriever.py
tests/: test_advanced_chunking.py  test_advanced_indexing.py  test_advanced_preprocessing.py  test_chunking.py  test_embedding_redaction.py  test_embeddings.py  test_loader.py  test_metadata_enrichment.py  test_prepare_advanced.py  test_preprocessing.py  test_run_chunking.py
