[project]
name = "sprint-mid-project-team1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "langsmith>=0.10.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pre-commit>=4.6.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
]
